# Pong

./: -a  .gitignore  CMakeLists.txt  Dot.cpp  Dot.h  Game.cpp  Game.h  README.md  Rect.cpp  Rect.h  System.cpp  System.h  apple  pong.cpp
allegro_lib/: CMakeCache.txt  Makefile  cmake_install.cmake
allegro_lib/addons/: Makefile  cmake_install.cmake
allegro_lib/docs/: Makefile  cmake_install.cmake
allegro_lib/examples/: Makefile  cmake_install.cmake  ex_acodec  ex_acodec_multi  ex_android  ex_audio_chain  ex_audio_props  ex_audio_simple  ex_audio_timer  ex_bitmap  ex_bitmap_flip  ex_blend  ex_blend2  ex_blend_bench  ex_blend_test  ex_blit  ex_camera  ex_clip  ex_clipboard  ex_color  ex_color2  ex_compressed  ex_config  ex_convert  ex_cpu  ex_depth_mask  ex_depth_target  ex_dir  ex_disable_screensaver  ex_display_events  ex_display_options  ex_draw  ex_draw_bitmap  ex_drawpixels  ex_dualies  ex_expose  ex_file  ex_file_slice  ex_filter  ex_font  (+86 more)
allegro_lib/lib/: liballegro_acodec.so.5.2.4  liballegro_audio.so.5.2.4  liballegro_color.so.5.2.4  liballegro_dialog.so.5.2.4  liballegro_font.so.5.2.4  liballegro_image.so.5.2.4  liballegro_main.so.5.2.4  liballegro_memfile.so.5.2.4  liballegro_physfs.so.5.2.4  liballegro_primitives.so.5.2.4  liballegro_ttf.so.5.2.4  liballegro_video.so.5.2.4
allegro_lib/tests/: Makefile  cmake_install.cmake  test_driver
include/: Game.h  Rect.h  System.h
lib/allegro5/: liballegro.so.5.2  liballegro_acodec.so.5.2  liballegro_acodec.so.5.2.4  liballegro_audio.so.5.2.4  liballegro_color.so.5.2  (+14 more)
src/: CMakeLists.txt  Game.cpp
(+46 files in other folders)
